<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgCharity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/charity_item_height"
        android:src="@drawable/placeholder"
        android:background="@color/light_grey"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Donate to:"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCharityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Please enter your name:"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtUsername"
                android:hint="NAME SURNAME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Amount: (please choose more than 2,000 bath)"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="xxxx.xx"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Credit Card Number: (16 digits)"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <co.omise.android.ui.CreditCardEditText
                android:id="@+id/edtCardNumber"
                android:hint="xxxx xxxx xxxx xxxx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="EXP Month:"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnExpMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="EXP Year:"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnExpYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CVV:"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtCvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:maxLength="3"
                        android:hint="xxx"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="DONATE" />


</LinearLayout>