<resources>
    <string name="app_name">TamBoon</string>
    <string name="root_detected_title">Your device is rooted</string>
    <string name="root_detected_message">Device is rooted. It can cause security vulnerabilities. This can put you at risk to do any financial transactions.</string>
    <string name="please_connect_internet">Please connect to internet.</string>
    <string name="please_waiting">Please Waiting...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_loading">There is an error. Please try again.</string>
    <string name="error_server">Our server has an error. Please try again.</string>
    <string name="failed_donate">Donate failed. Please try again.</string>
    <string name="success">SUCCESS :)</string>
    <string name="no_result">There hasn\'t any results.\nTry refresh again by pull it down.</string>

    <string-array name="month_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year_array">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>


</resources>
